i added text and picture for the landing page

--- a/task-management/src/App.css
+++ b/task-management/src/App.css
@@ -31,7 +31,7 @@ body{
 .site-title {
   text-decoration: none;
   color: #1D3960;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -66,4 +66,57 @@ body{
 .navbar-button:hover {
   background-color: #3498db;
   color: #fff;
+}
+
+/* YourComponent.css */
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10%; 
+  margin: 0 auto; /* Center the container */
+  padding-top: 100px;
+}
+
+.text-container {
+  width: 60%; /* Adjust the width as needed */
+  
+}
+
+.text-container h1{
+  margin-bottom: 20px;
+}
+
+.text-container h3{
+  margin-bottom: 20px;
+}
+
+.text-container p{
+
+  margin-bottom: 30px;
+}
+
+
+
+.image-container {
+  width: 35%; /* Adjust the width as needed */
+}
+
+
+.image-container img {
+  max-width: 100%;
+  
+}
+
+.getstartedbtn{
+
+  background-color: #3498db;
+
+  color: #fff; /* Text color */
+  padding: 10px 30px; /* Adjust padding as needed */
+  font-size: 16px; /* Adjust font size as needed */
+  border: none; /* Remove border */
+  border-radius: 5px; /* Add rounded corners if desired */
+  cursor: pointer; /* Add a pointer cursor on hover */
 }
